Fix hero photo on home screen intersecting the header on mobile. Fix photo on single project pages being larger than 100% on mobile.

--- a/assets/sass/hero.scss
+++ b/assets/sass/hero.scss
@@ -17,6 +17,8 @@
   align-content: center;
   justify-content: center;
   gap: 40px 20px;
+
+  margin: 60px 0;
 }
 
 @include media-breakpoint-up(md) {
