--- a/assets/sass/projects.scss
+++ b/assets/sass/projects.scss
@@ -9,6 +9,10 @@
   }
 }
 
+.project-page__image {
+  max-width: 100%;
+}
+
 // ========== Section ===============
 .projects {
   padding: 50px 10px;
